added codes on both files

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li>Activités</li>
                 </ul>
         </header>
+
         <section>
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
@@ -36,7 +37,6 @@
             </button>
         </form> 
         <section class="filters">    
-            <!--Filtres recherche par catégorie-->
             <h2>Filtres</h2>
             <ul> 
                 <li> 
@@ -67,7 +67,7 @@
                 <div class="hebergements-title">
                     <h2>Hébergements à marseille</h2>
                 </div>
-                <div class="hébergement-cards">
+                <div class="hebergements-cards">
                     <a href="#">
                         <article class="card">
                             <img src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre hôtel du port">
@@ -257,11 +257,11 @@
                 </section>
             </div>
             <section>
-                <article class="Activités">
-                    <div class="Activités-title">
+                <article class="Activites">
+                    <div class="Activites-title">
                         <h2>Activités à marseille</h2>
                     </div>
-                    <div class="Activités-card">
+                    <div class="Activites-card">
                         <a href="#">
                             <article class="card">
                                 <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
@@ -292,7 +292,43 @@
             </section>
         </main>
         <footer>
-            
+            <section>
+                <h3>A propos</h3>
+                <ul>
+                    <li>
+                        <a href="#">Fonctionnement du site</a>
+                    </li>
+                    <li>
+                        <a href="#">Conditions générales de vente</a>
+                    </li>   
+                    <li>
+                        <a href="#">Données et confidentialité</a>
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Nos hébergements</h3>
+                <ul>
+                    <li>
+                        <a href="#">Charte qualité</a>
+                    </li>
+                    <li>
+                        <a href="#">Soumettre votre hôtel</a>
+                    </li>
+                </ul>
+            </section>
+		    <section>
+                <h3>Assistance</h3>
+                <ul>
+                    <li>
+                        <a href="#">Centre d'aide</a>
+                    </li>
+                    <li>
+                        <a href="#">Nous contacter</a>
+                    </li>
+                </ul>
+            </section>  
         </footer>
     </div>
 </body>
