added more code for activities s secttion

--- a/index.html
+++ b/index.html
@@ -256,8 +256,7 @@
                     </div>
                 </section>
             </div>
-            <section>
-                <article class="Activites">
+            <section class="Activites">
                     <div class="Activites-title">
                         <h2>Activités à marseille</h2>
                     </div>
@@ -288,7 +287,6 @@
                             </article>
                         </a>
                     </div>
-                </article>
             </section>
         </main>
         <footer>
