--- a/index.html
+++ b/index.html
@@ -17,25 +17,29 @@
 <body>
     <div class="main-container">
         <header>
+            <a href="index.html">
                 <img src="images/logo/Booki.png" alt="logo du site">
-                <ul>
-                    <li>Hebergements</li>
-                    <li>Activités</li>
-                </ul>
+            </a>
+            <ul>
+                <li><a href="#Hebergements">Hébergements</a></li>
+                <li><a href="#Activités">Activités</a></li>
+            </ul>
         </header>
 
         <section>
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
         </section>
+
         <form>
             <i class="fa-solid fa-location-dot"></i>
             <input type="search" placeholder="Marseille, France">
-            <button>
+            <button class="search_bar" >
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <span>Recherche</span>
             </button>
         </form> 
+        
         <section class="filters">    
             <h2>Filtres</h2>
             <ul> 
