--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span>Recherche</span>
             </button>
         </form> 
-        
+
         <section class="filters">    
             <h2>Filtres</h2>
             <ul> 
@@ -71,7 +71,7 @@
                 <div class="hebergements-title">
                     <h2>Hébergements à marseille</h2>
                 </div>
-                <div class="hebergements-cards">
+                <div class="hebergements-cards1">
                     <a href="#">
                         <article class="card">
                             <img src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre hôtel du port">
@@ -131,7 +131,8 @@
                             </div>
                         </article>
                     </a>
-
+                </div>
+                <div class="hebergements-cards2">
                     <a href="#">
                         <article class="card">
                             <img src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel de la mer">
@@ -191,6 +192,7 @@
                             </div>
                         </article>
                     </a>
+                </div>
                     <p>Afficher Plus</p>
                 </div>
                 </section>
