style all sections

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                 </li>
             </ul>
         </section> 
+        <section class="info">
+            <i class="info-icon"><i class="fas fa-info"></i>
+            <p class="infos-txt">
+                Plus de 500 logements sont disponibles dans cette ville
+            </p>
+        </section>
 
         <main>
             <div class="hebergements-and-populaires">
