--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <a href="index.html">
-                <img src="images/logo/Booki.png" alt="logo du site">
+                <img src="images/logo/Booki@3x.png" alt="logo du site">
             </a>
             <ul>
                 <li><a href="#Hebergements">Hébergements</a></li>
@@ -64,12 +64,12 @@
                 </li>
             </ul>
         </section> 
-        <section class="info">
-            <i class="info-icon"><i class="fas fa-info"></i>
-            <p class="infos-txt">
+        <div class="infos-logements">
+            <div class="infos-icon"><i class="fas fa-info"></i></div>
+            <div class="infos-txt">
                 Plus de 500 logements sont disponibles dans cette ville
-            </p>
-        </section>
+            </div>
+        </div>
 
         <main>
             <div class="hebergements-and-populaires">
@@ -273,14 +273,14 @@
                     <div class="Activites-card">
                         <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="images/activites/reno-laithienne.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <h3 class="card-title">Hôtel Bleu et Blanc</h3>
                             </article>
                         </a>
 
                         <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image Fort de pomègues">
+                                <img src="images/activites/paul-hermann.jpg" alt="Image Fort de pomègues">
                                 <h3 class="card-title">Fort de Pomègue</h3>      
                             </article>
                         </a>
