mergin sur le header-text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </header>
 
-        <section>
+        <section class="header-text">
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
         </section>
@@ -340,5 +340,4 @@
         </footer>
     </div>
 </body>
-
 </html>
