margins on the footer section

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </main>
         <footer>
             <section>
-                <h3>A propos</h3>
+                <h3>À propos</h3>
                 <ul>
                     <li>
                         <a href="#">Fonctionnement du site</a>
