--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="images/logo/Booki@3x.png" alt="logo du site">
             </a>
             <ul>
-                <li><a href="#Hebergements">Hébergements</a></li>
+                <li><a href="#hebergements-title">Hébergements</a></li>
                 <li><a href="#Activités">Activités</a></li>
             </ul>
         </header>
@@ -72,9 +72,9 @@
 
         <main>
             <div class="hebergements-and-populaires">
-                <section class="hebergements" id="hebergements">
+                <section class="hebergements">
                     <div class="hebergements-title">
-                        <h2>Hébergements à marseille</h2>
+                        <h2>Hébergements à Marseille</h2>
                     </div>
                     <div class="hebergements-cards">
                         <a href="#">
