managed to link header links

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <img src="images/logo/Booki@3x.png" alt="logo du site">
             </a>
             <ul>
-                <li><a href="#hebergements-title">Hébergements</a></li>
-                <li><a href="#Activités">Activités</a></li>
+                <li><a href="#hebergements">Hébergements</a></li>
+                <li><a href="#activites">Activités</a></li>
             </ul>
         </header>
 
@@ -72,7 +72,7 @@
 
         <main>
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section id="hebergements" class="hebergements">
                     <div class="hebergements-title">
                         <h2>Hébergements à Marseille</h2>
                     </div>
@@ -198,7 +198,7 @@
                             </article>
                         </a>
                     </div>
-                        <p>Afficher Plus</p>
+                        <span>Afficher Plus</span>
                     </div>
                     </section>
                 <section class="populaires">
@@ -267,7 +267,7 @@
                     </div>
                 </section>
             </div>
-            <section class="Activites" id="activites">
+            <section id="activites" class="activites">
                     <h2>Activités à marseille</h2>
                     <div class="Activites-card">
                         <a href="#">
