finishing up the tablet version

--- a/index.html
+++ b/index.html
@@ -136,8 +136,6 @@
                                 </div>
                             </article>
                         </a>
-                
-                    <div class="hebergements-cards">
                         <a href="#">
                             <article class="card">
                                 <img src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel de la mer">
@@ -198,9 +196,10 @@
                             </article>
                         </a>
                     </div>
+                    <div>
                         <span>Afficher Plus</span>
                     </div>
-                    </section>
+                </section>
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -267,6 +266,7 @@
                     </div>
                 </section>
             </div>
+            
             <section id="activites" class="activites">
                     <h2>Activités à marseille</h2>
                     <div class="Activites-card">
