worked on margins for the desktop view worked on the breaking points on tablet synchronising margins on both tab n desktop

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <img src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre hôtel du port">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Hôtel du port</h3>
+                                        <h4 class="card-title">Hôtel du port</h4>
                                         <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
@@ -102,7 +102,7 @@
                                 <img src="images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel Chez Amina">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Hôtel Chez Amina</h3>
+                                        <h4 class="card-title">Hôtel Chez Amina</h4>
                                         <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
@@ -122,7 +122,7 @@
                                 <img src="images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel les mouettes">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Hôtel Les mouettes</h3>
+                                        <h4 class="card-title">Hôtel Les mouettes</h4>
                                         <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
@@ -141,7 +141,7 @@
                                 <img src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel de la mer">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Hôtel de la mer</h3>
+                                        <h4 class="card-title">Hôtel de la mer</h4>
                                         <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
@@ -161,7 +161,7 @@
                                 <img src="images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Auberge La Canabière</h3>
+                                        <h4 class="card-title">Auberge La Canabière</h4>
                                         <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
@@ -181,7 +181,7 @@
                                 <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel Auberge Le panier">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Auberge Le Panier </h3>
+                                        <h4 class="card-title">Auberge Le Panier </h4>
                                         <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
@@ -196,8 +196,8 @@
                             </article>
                         </a>
                     </div>
-                    <div>
-                        <span>Afficher Plus</span>
+                    <div class="hebergements-text">
+                        Afficher Plus
                     </div>
                 </section>
                 <section class="populaires">
@@ -266,33 +266,33 @@
                     </div>
                 </section>
             </div>
-            
+
             <section id="activites" class="activites">
                     <h2>Activités à marseille</h2>
                     <div class="Activites-card">
                         <a href="#">
                             <article class="card">
                                 <img src="images/activites/reno-laithienne.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <h3 class="card-title">Vieux-Port</h3>
+                                <h4 class="card-title">Vieux-Port</h4>
                             </article>
                         </a>
 
                         <a href="#">
                             <article class="card">
                                 <img src="images/activites/paul-hermann.jpg" alt="Image Fort de pomègues">
-                                <h3 class="card-title">Fort de Pomègue</h3>      
+                                <h4 class="card-title">Fort de Pomègue</h4>      
                             </article>
                         </a>
                         <a href="#">
                             <article class="card">
                                 <img src="images/activites/kilyan-sockalingum.jpg" alt="Parc national des calanques">
-                                <h3 class="card-title">Parc national des calanques</h3>
+                                <h4 class="card-title">Parc national des calanques</h4>
                             </article>
                         </a>
                         <a href="#">
                             <article class="card">
                                 <img src="images/activites/florian-wehde.jpg" alt="Image Notre dame de la garde">
-                                <h3>Notre-Dame-de-la garde</h3>
+                                <h4>Notre-Dame-de-la garde</h4>
                             </article>
                         </a>
                     </div>
