--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 <body>
     <div class="main-container">
         <header>
+            <div>
             <a href="index.html">
                 <img src="images/logo/Booki@3x.png" alt="logo du site">
             </a>
+        </div>
+        <div>
             <ul>
                 <li><a href="#hebergements">Hébergements</a></li>
                 <li><a href="#activites">Activités</a></li>
             </ul>
+        </div>
         </header>
 
         <section class="header-text">
@@ -298,45 +302,45 @@
                     </div>
             </section>
         </main>
-        <footer>
-            <section>
-                <h3>À propos</h3>
-                <ul>
-                    <li>
-                        <a href="#">Fonctionnement du site</a>
-                    </li>
-                    <li>
-                        <a href="#">Conditions générales de vente</a>
-                    </li>   
-                    <li>
-                        <a href="#">Données et confidentialité</a>
-                    </li>
-                </ul>
-            </section>
-
-            <section>
-                <h3>Nos hébergements</h3>
-                <ul>
-                    <li>
-                        <a href="#">Charte qualité</a>
-                    </li>
-                    <li>
-                        <a href="#">Soumettre votre hôtel</a>
-                    </li>
-                </ul>
-            </section>
-		    <section>
-                <h3>Assistance</h3>
-                <ul>
-                    <li>
-                        <a href="#">Centre d'aide</a>
-                    </li>
-                    <li>
-                        <a href="#">Nous contacter</a>
-                    </li>
-                </ul>
-            </section>  
-        </footer>
     </div>
+    <footer>
+        <section>
+            <h3>À propos</h3>
+            <ul>
+                <li>
+                    <a href="#">Fonctionnement du site</a>
+                </li>
+                <li>
+                    <a href="#">Conditions générales de vente</a>
+                </li>   
+                <li>
+                    <a href="#">Données et confidentialité</a>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Nos hébergements</h3>
+            <ul>
+                <li>
+                    <a href="#">Charte qualité</a>
+                </li>
+                <li>
+                    <a href="#">Soumettre votre hôtel</a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>Assistance</h3>
+            <ul>
+                <li>
+                    <a href="#">Centre d'aide</a>
+                </li>
+                <li>
+                    <a href="#">Nous contacter</a>
+                </li>
+            </ul>
+        </section>  
+    </footer>
 </body>
 </html>
