Finished the mobile view

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 </li>
             
                 <li>
-                    <i class="fa-solid fa-dog"></i>
-                    <span>Animaux autorisés</span>
+                    <i class="fa-solid fa-fire"></i>
+                    <span>Nos pépites</span>
                 </li>
             </ul>
         </section> 
