Centred the log on the mobile view

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <body>
     <div class="main-container">
         <header>
-            <div>
-            <a href="index.html">
+            <div class="logo">
+                <a href="index.html">
                 <img src="images/logo/Booki@3x.png" alt="logo du site">
-            </a>
-        </div>
-        <div>
-            <ul>
-                <li><a href="#hebergements">Hébergements</a></li>
-                <li><a href="#activites">Activités</a></li>
-            </ul>
-        </div>
+                </a>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                    <li><a href="#activites">Activités</a></li>
+                </ul>
+            </div>
         </header>
 
         <section class="header-text">
