I centered the Form section Removeded the padding on the hebergement sec

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <img src="images/logo/Booki@3x.png" alt="logo du site">
                 </a>
             </div>
-            <div>
+            <nav>
                 <ul>
                     <li><a href="#hebergements">Hébergements</a></li>
                     <li><a href="#activites">Activités</a></li>
                 </ul>
-            </div>
+            </nav>
         </header>
 
         <section class="header-text">
