added a header tag

--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 
 <body>
     <div class="main-container">
-        <nav>
+        <header>
             <div class="logo">
                 <a href="index.html">
                 <img src="images/logo/Booki@3x.png" alt="logo du site">
                 </a>
             </div>
-            <ul>
-                <li><a href="#hebergements">Hébergements</a></li>
-                 <li><a href="#activites">Activités</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                        <li><a href="#activites">Activités</a></li>
+                </ul>
+           </nav>
            
-        </nav>
+        </header>
 
         <section class="header-text">
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
